k8s/apps/flux-system/addons/app/webhooks/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: external.devbu.io
spec:
  ingressClassName: external
  rules:
    - host: 'flux-webhook.${SECRET_DOMAIN}'
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
